[cs-ui] CSDatepicker - Added max-width: 100% to prevent overflow when custom width exceeds container width

--- a/cs-ui-components/src/sass/components/datepicker/_cs-datepicker.scss
+++ b/cs-ui-components/src/sass/components/datepicker/_cs-datepicker.scss
@@ -1,6 +1,7 @@
 .cs-datepicker {
 	display: flex;
 	flex-direction: column;
+	max-width: 100%;
 	position: relative;
 	width: var(--datepicker-width, 242px);
 
